fixed automcomplete behind modal

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,8 +1,5 @@
-.new-survey-modal {
-  z-index: 1500;
-  select:-webkit-autofill {
-    z-index: 1510;
-  }
+.pac-container {
+    z-index: 1051 !important;
 }
 
 .modal-footer {
